# ducker

./: .gitignore  CMakeLists.txt  Ducker.jucer  README.md  USAGE.md
JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: DSPUtils.h  Ducker.cpp  Ducker.h  EnvelopeGenerator.cpp  EnvelopeGenerator.h  SidechainProcessor.cpp  SidechainProcessor.h
Source/UI/: EnvelopeDisplay.h  LookAndFeel.h  MeterComponents.h
background_candidates/: brazilian_night_ocean_blue_INFO.txt
